// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderRightColor renders 0 1`] = `
Array [
  .c0 {
  border-right-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: #0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightColor renders function 1`] = `
Array [
  .c0 {
  border-right-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightColor renders invalid theme path 1`] = `
Array [
  .c0 {
  border-right-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightColor renders negative number 1`] = `
Array [
  .c0 {
  border-right-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: #-42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: #-42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightColor renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-right-color: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-right-color: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-right-color: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-right-color: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-right-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-right-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-right-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-right-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-right-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-right-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-right-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-right-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightColor renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-right-color: July;
}

@media May {
  .c0 {
    border-right-color: August;
  }
}

@media April {
  .c0 {
    border-right-color: September;
  }
}

@media January {
  .c0 {
    border-right-color: November;
  }
}

@media April {
  .c0 {
    border-right-color: August;
  }
}

@media June {
  .c0 {
    border-right-color: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: July;
}

@media May {
  .c0 {
    border-right-color: August;
  }
}

@media April {
  .c0 {
    border-right-color: September;
  }
}

@media January {
  .c0 {
    border-right-color: November;
  }
}

@media April {
  .c0 {
    border-right-color: August;
  }
}

@media June {
  .c0 {
    border-right-color: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-right-color: November;
  }
}

@media April {
  .c0 {
    border-right-color: January;
  }
}

@media January {
  .c0 {
    border-right-color: December;
  }
}

@media April {
  .c0 {
    border-right-color: April;
  }
}

@media June {
  .c0 {
    border-right-color: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-right-color: November;
  }
}

@media April {
  .c0 {
    border-right-color: January;
  }
}

@media January {
  .c0 {
    border-right-color: December;
  }
}

@media April {
  .c0 {
    border-right-color: April;
  }
}

@media June {
  .c0 {
    border-right-color: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightColor renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-right-color: July;
  }
}

@media April {
  .c0 {
    border-right-color: August;
  }
}

@media January {
  .c0 {
    border-right-color: September;
  }
}

@media April {
  .c0 {
    border-right-color: November;
  }
}

@media June {
  .c0 {
    border-right-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-right-color: July;
  }
}

@media April {
  .c0 {
    border-right-color: August;
  }
}

@media January {
  .c0 {
    border-right-color: September;
  }
}

@media April {
  .c0 {
    border-right-color: November;
  }
}

@media June {
  .c0 {
    border-right-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-right-color: January;
  }
}

@media April {
  .c0 {
    border-right-color: December;
  }
}

@media January {
  .c0 {
    border-right-color: April;
  }
}

@media April {
  .c0 {
    border-right-color: May;
  }
}

@media June {
  .c0 {
    border-right-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-right-color: January;
  }
}

@media April {
  .c0 {
    border-right-color: December;
  }
}

@media January {
  .c0 {
    border-right-color: April;
  }
}

@media April {
  .c0 {
    border-right-color: May;
  }
}

@media June {
  .c0 {
    border-right-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightColor renders postitive number 1`] = `
Array [
  .c0 {
  border-right-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: #42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: #42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightColor renders string 1`] = `
Array [
  .c0 {
  border-right-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderRightColor renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderRightColor renders valid theme path 1`] = `
Array [
  .c0 {
  border-right-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-right-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
